feat(mdm): add currency fx management
